# microprocessors-labs

./: README.md
Lab1_1/: Lab1_1.cogui  Lab1_1.coproj  main.c
Lab2/: Lab1_1.cogui  Lab1_1.coproj  main.c
Lab2/Lab1_1/Lab1_1.elf.xcodeproj/: project.pbxproj
Lab3/: CMakeLists.txt  Lab1_1.coproj  main.c
Lab3/Lab1_1/Lab1_1.elf.xcodeproj/: project.pbxproj
Test_Елочка/: main.c
Test_Елочка/Lab1_1/Lab1_1.elf.xcodeproj/: project.pbxproj
